devtools/client/themes/webconsole.css
/* ... */
#
output
-
container
.
hideTimestamps
>
.
message
>
.
timestamp
{
display
:
none
;
}
#
output
-
container
.
hideTimestamps
>
.
message
>
.
indent
{
background
-
color
:
var
(
-
-
theme
-
body
-
background
)
;
}
.
filtered
-
by
-
type
.
filtered
-
by
-
string
{
display
:
none
;
}
.
hidden
-
message
{
display
:
block
;
visibility
:
hidden
;
height
:
0
;
overflow
:
hidden
;
}
.
webconsole
-
filter
-
button
{
-
moz
-
user
-
focus
:
normal
;
}
/
*
Network
styles
*
/
.
theme
-
dark
.
message
[
severity
=
error
]
.
theme
-
dark
.
message
.
error
{
background
-
color
:
rgba
(
235
83
104
0
.
17
)
;
}
.
console
-
string
{
color
:
var
(
-
-
theme
-
highlight
-
lightorange
)
;
}
.
theme
-
selected
.
console
-
string
.
theme
-
selected
.
cm
-
number
.
theme
-
selected
.
cm
-
variable
.
theme
-
selected
.
kind
-
ArrayLike
{
color
:
#
f5f7fa
!
important
;
/
*
Selection
Text
Color
*
/
}
.
message
[
category
=
network
]
>
.
indent
{
border
-
inline
-
end
:
solid
var
(
-
-
theme
-
body
-
color
-
alt
)
6px
;
}
.
message
[
category
=
network
]
[
severity
=
error
]
>
.
icon
:
:
before
.
message
.
network
.
error
>
.
icon
:
:
before
{
background
-
position
:
-
12px
0
;
}
.
message
[
category
=
network
]
>
.
message
-
body
.
message
.
network
>
.
message
-
body
{
display
:
flex
;
flex
-
wrap
:
wrap
;
}
.
message
[
category
=
network
]
.
method
.
message
.
network
.
method
{
flex
:
none
;
}
.
message
[
category
=
network
]
:
not
(
.
navigation
-
marker
)
.
url
.
message
.
network
:
not
(
.
navigation
-
marker
)
.
url
{
flex
:
1
1
auto
;
/
*
Make
sure
the
URL
is
very
small
initially
let
flex
change
width
as
needed
.
*
/
width
:
100px
;
min
-
width
:
5em
;
white
-
space
:
nowrap
;
overflow
:
hidden
;
text
-
overflow
:
ellipsis
;
}
.
message
[
category
=
network
]
.
status
.
message
.
network
.
status
{
flex
:
none
;
margin
-
inline
-
start
:
6px
;
}
.
message
[
category
=
network
]
.
mixed
-
content
.
url
.
message
.
network
.
mixed
-
content
.
url
{
color
:
var
(
-
-
theme
-
highlight
-
red
)
;
}
.
message
.
learn
-
more
-
link
{
color
:
var
(
-
-
theme
-
highlight
-
blue
)
;
margin
:
0
6px
;
}
.
message
[
category
=
network
]
.
xhr
.
message
.
network
.
xhr
{
background
-
color
:
var
(
-
-
theme
-
body
-
color
-
alt
)
;
color
:
var
(
-
-
theme
-
body
-
background
)
;
border
-
radius
:
3px
;
font
-
weight
:
bold
;
font
-
size
:
10px
;
padding
:
1px
2px
;
line
-
height
:
10px
;
margin
-
inline
-
start
:
0
;
margin
-
inline
-
end
:
1ex
;
}
/
*
CSS
styles
*
/
.
message
[
category
=
cssparser
]
>
.
indent
.
message
.
cssparser
>
.
indent
{
border
-
inline
-
end
:
solid
#
00b6f0
6px
;
}
.
message
[
category
=
cssparser
]
[
severity
=
error
]
>
.
icon
:
:
before
.
message
.
cssparser
.
error
>
.
icon
:
:
before
{
background
-
position
:
-
12px
-
12px
;
}
.
message
[
category
=
cssparser
]
[
severity
=
warn
]
>
.
icon
:
:
before
.
message
.
cssparser
.
warn
>
.
icon
:
:
before
{
background
-
position
:
-
24px
-
12px
;
}
/
*
JS
styles
*
/
.
message
[
category
=
exception
]
>
.
indent
.
message
.
exception
>
.
indent
{
border
-
inline
-
end
:
solid
#
fb9500
6px
;
}
.
message
[
category
=
exception
]
[
severity
=
error
]
>
.
icon
:
:
before
.
message
.
exception
.
error
>
.
icon
:
:
before
{
background
-
position
:
-
12px
-
24px
;
}
.
message
[
category
=
exception
]
[
severity
=
warn
]
>
.
icon
:
:
before
.
message
.
exception
.
warn
>
.
icon
:
:
before
{
background
-
position
:
-
24px
-
24px
;
}
/
*
Web
Developer
styles
*
/
.
message
[
category
=
console
]
>
.
indent
.
message
.
console
-
api
>
.
indent
{
border
-
inline
-
end
:
solid
#
cbcbcb
6px
;
}
.
message
[
category
=
console
]
[
severity
=
error
]
>
.
icon
:
:
before
.
message
[
category
=
output
]
[
severity
=
error
]
>
.
icon
:
:
before
.
message
[
category
=
server
]
[
severity
=
error
]
>
.
icon
:
:
before
{
background
-
position
:
-
12px
-
36px
;
}
.
message
[
category
=
console
]
[
severity
=
warn
]
>
.
icon
:
:
before
.
message
[
category
=
server
]
[
severity
=
warn
]
>
.
icon
:
:
before
{
background
-
position
:
-
24px
-
36px
;
}
.
message
[
category
=
console
]
[
severity
=
info
]
>
.
icon
:
:
before
.
message
[
category
=
server
]
[
severity
=
info
]
>
.
icon
:
:
before
{
background
-
position
:
-
36px
-
36px
;
}
/
*
Server
Logging
Styles
*
/
.
message
[
category
=
server
]
>
.
indent
.
message
.
server
>
.
indent
{
border
-
inline
-
end
:
solid
#
90B090
6px
;
}
/
*
Input
and
output
styles
*
/
.
message
[
category
=
input
]
>
.
indent
.
message
[
category
=
output
]
>
.
indent
.
message
.
command
>
.
indent
.
message
.
result
>
.
indent
{
border
-
inline
-
end
:
solid
#
808080
6px
;
}
.
message
[
category
=
input
]
>
.
icon
:
:
before
.
message
.
command
>
.
icon
:
:
before
{
background
-
position
:
-
48px
-
36px
;
}
.
message
[
category
=
output
]
>
.
icon
:
:
before
.
message
.
result
>
.
icon
:
:
before
{
background
-
position
:
-
60px
-
36px
;
}
/
*
JSTerm
Styles
*
/
html
#
jsterm
-
wrapper
html
.
jsterm
-
stack
-
node
html
.
jsterm
-
input
-
node
-
html
html
#
webconsole
-
notificationbox
{
flex
:
0
;
width
:
100vw
;
}
.
jsterm
-
input
-
container
{
background
-
color
:
var
(
-
-
theme
-
tab
-
toolbar
-
background
)
;
border
-
top
:
1px
solid
var
(
-
-
theme
-
splitter
-
color
)
;
}
.
jsterm
-
input
-
node
{
/
*
Always
allow
scrolling
on
input
-
it
auto
expands
in
js
by
setting
height
but
don
'
t
want
it
to
get
bigger
than
the
window
.
24px
=
toolbar
height
.
*
/
max
-
height
:
calc
(
90vh
-
24px
)
;
background
-
image
:
var
(
-
-
theme
-
command
-
line
-
image
)
;
background
-
repeat
:
no
-
repeat
;
background
-
size
:
16px
16px
;
background
-
position
:
4px
50
%
;
color
:
var
(
-
-
theme
-
content
-
color1
)
;
box
-
sizing
:
border
-
box
;
}
.
jsterm
-
complete
-
node
{
color
:
var
(
-
-
theme
-
comment
)
;
}
.
theme
-
light
.
jsterm
-
input
-
container
{
/
*
For
light
theme
use
a
white
background
for
the
input
-
it
looks
better
than
off
-
white
*
/
background
-
color
:
#
fff
;
border
-
top
-
color
:
#
e0e0e0
;
}
/* ... */

