Bug 1425521 - Wrap JsTerm in a React component in new frontend; r=bgrins.
MozReview-Commit-ID: GGq6ZB760d9

UltraBlame original commit: 18c6e8809c2bbcf0a96b5c11d86f5105d0754d4a

--- a/devtools/client/themes/webconsole.css
+++ b/devtools/client/themes/webconsole.css
@@ -2168,18 +2168,6 @@ Styles
 *
 /
 html
-#
-jsterm
--
-wrapper
-html
-.
-jsterm
--
-stack
--
-node
-html
 .
 jsterm
 -
@@ -2440,19 +2428,6 @@ HTML
 frontend
 *
 /
-html
-.
-jsterm
--
-stack
--
-node
-{
-position
-:
-relative
-;
-}
 textarea
 .
 jsterm
@@ -2694,6 +2669,86 @@ radius
 0
 4px
 4px
+;
+}
+/
+*
+Unset
+the
+bottom
+right
+radius
+on
+the
+jsterm
+inputs
+when
+the
+sidebar
+is
+visible
+*
+/
+:
+root
+[
+platform
+=
+"
+mac
+"
+]
+.
+sidebar
+~
+.
+jsterm
+-
+input
+-
+container
+textarea
+.
+jsterm
+-
+input
+-
+node
+:
+root
+[
+platform
+=
+"
+mac
+"
+]
+.
+sidebar
+~
+.
+jsterm
+-
+input
+-
+container
+textarea
+.
+jsterm
+-
+complete
+-
+node
+{
+border
+-
+bottom
+-
+right
+-
+radius
+:
+0
 ;
 }
 /
@@ -7905,6 +7960,255 @@ overflow
 hidden
 ;
 }
+/
+*
+*
+Here
+'
+s
+what
+the
+layout
+of
+the
+console
+looks
+like
+:
+*
+*
++
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
++
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
++
+*
+|
+FILTER
+BAR
+|
+|
+*
++
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
++
+|
+*
+|
+|
+|
+*
+|
+CONSOLE
+OUTPUT
+|
+SIDEBAR
+|
+*
+|
+|
+|
+*
++
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
++
+|
+*
+|
+NOTIFICATION
+BOX
+|
+|
+*
++
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
++
+|
+*
+|
+JSTERM
+CONTAINER
+|
+|
+*
++
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
++
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
++
+*
+/
 .
 webconsole
 -
@@ -7922,7 +8226,11 @@ template
 -
 columns
 :
+minmax
+(
+200px
 1fr
+)
 auto
 ;
 grid
@@ -7933,6 +8241,8 @@ rows
 :
 auto
 1fr
+auto
+auto
 ;
 height
 :
@@ -7942,6 +8252,76 @@ height
 width
 :
 100vw
+;
+}
+.
+webconsole
+-
+output
+-
+wrapper
+#
+webconsole
+-
+notificationbox
+{
+grid
+-
+column
+:
+1
+/
+2
+;
+grid
+-
+row
+:
+3
+/
+4
+;
+}
+.
+webconsole
+-
+output
+-
+wrapper
+.
+jsterm
+-
+input
+-
+container
+{
+grid
+-
+column
+:
+1
+/
+2
+;
+grid
+-
+row
+:
+-
+1
+/
+-
+2
+;
+position
+:
+relative
+;
+z
+-
+index
+:
+1
 ;
 }
 /
